--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <div id="recipes-container"></div>
   </main>
   <!-- script here to contect to js file -->
+  <script src="index.js"></script>
+
 </body>
 
 </html>
