Coding out initial pusedo code;

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       <button type="submit">Find Recipes</button>
     </form>
 
+    <!-- Event listening practice from MDN docs-->
+    <!-- <p id="para">Some text here</p>
+    <button>blue</button>
+    <button>red</button>
+    <button>green</button>
+    <button>sandwiches</button> -->
+
     <div id="recipes-container"></div>
   </main>
   <!-- script here to contect to js file -->
