Adding example response from api to save on free token calls; adding fetch to spoonacular;

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <form id="ingredient-form">
       <input type="text" id="ingredients" placeholder="e.g. apples, flour, sugar" />
-      <button type="submit">Find Recipes</button>
+      <button type="submit" id="fetch-recipes-btn">Find Recipes</button>
     </form>
 
     <!-- Event listening practice from MDN docs-->
@@ -31,6 +31,7 @@
     <div id="recipes-container"></div>
   </main>
   <!-- script here to contect to js file -->
+  <script src="fakeAPIResponse.js"></script>
   <script src="index.js"></script>
 
 </body>
