Removing some console logs and psuedo-code comments; renaming some functions to better match what they do;

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <button type="submit" id="fetch-recipes-btn">Find Recipes</button>
     </form>
 
-    <div id="recipes-container"></div>
+    <div id="recipes-container">
+      <p id="para-tag"></p>
+    </div>
   </main>
   <!-- script here to contect to js file -->
   <script src="fakeAPIResponse.js"></script>
