updating readme with capstone requirements; adding input validator;

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <input type="text" id="ingredients" placeholder="e.g. apples, flour, sugar" />
       <button type="submit" id="fetch-recipes-btn">Find Recipes</button>
     </form>
+    <div id="error-message" style="color: red; display: none;">Please enter ingredients without numbers.</div>
 
     <div id="recipes-container">
       <p id="para-tag"></p>
