--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
     <header>
       <h1>What the Fridge?! 🥕</h1>
       <p>Enter the ingredients you have, separated by commas, to find recipes you can make!</p>
+      <a href="unit-converter.html">Go to Measurement Converter</a>
     </header>
 
+    <section>
     <form id="ingredient-form">
       <input type="text" id="ingredients" placeholder="e.g. apples, flour, sugar" />
       <button type="submit" id="fetch-recipes-btn">Find Recipes</button>
     </form>
-    <div id="error-message" style="color: red; display: none;">Please enter ingredients without numbers.</div>
+      <div id="error-message" style="color: red; display: none;">Please enter valid ingredient.</div>
 
     <div id="recipes-container">
       <p id="para-tag"></p>
     </div>
-
+    </section>
   </main>
   <!-- script here to contect to js file -->
   <script src="fakeAPIResponse.js"></script>
